musicleague/static/css/league.css
@import url('https://fonts.googleapis.com/css?family=Nunito:400,900');

@font-face {
    font-family: 'Cubano';
    src: url("/static/fonts/Cubano/cubano-regular-webfont.ttf");
}

/* REMOVE THE NAVBAR AND SPACING UP TOP */
.navbar { display: none; margin: 0px; }
.spacer { display: none; }

body { font-family: 'Nunito', sans-serif; }

.vcenter {
    display: inline-block;
    vertical-align: middle;
    float: none;
}

#nav-bar {
    background: none;
    border-bottom: 3px solid #fff;
    color: #fff;
    font-size: 14px;
    height: 120px;
    line-height: 19px;
    padding-left: 50px;
    padding-right: 50px;
    text-align: right;
    width: 100%;
}

    #nav-bar .brand-wrapper {
        float: left;
        line-height: 120px;
    }

        #nav-bar .brand-wrapper .brand-icon {
            height: 86px;
            width: 70px;
        }

    #nav-bar .add-league-wrapper {
        display: inline-block;
        line-height: 120px;
        text-align: right;
        vertical-align: top;
    }

        #nav-bar .add-league-wrapper .add-league-text { margin-right: 10px; }

        #nav-bar .add-league-wrapper .add-league-icon {
            height: 32px;
            width: 32px;
        }

    #nav-bar .account-divider {
        display: inline-block;;
        margin-left: 25px;
        margin-right: 25px;
    }

    #nav-bar .account-wrapper {
        display: inline-block;
        line-height: 120px;
        text-align: right;
        vertical-align: top;
    }

        #nav-bar .account-wrapper .dropdown-menu {
            background-color: rgba(0, 37, 154, 0.85);
            border: 3px solid #fff;
            border-radius: 8px;
            color: #fff;
            font-size: 18px;
            line-height: 40px;
            margin-top: 25px;
            padding: 25px 0px;
        }

        #nav-bar .account-wrapper .dropdown-menu > li > a {
            color: #fff;
            line-height: 40px;
            vertical-align: middle;
        }

            #nav-bar .account-wrapper .dropdown-menu > li > a > .text { vertical-align: middle; }

            #nav-bar .account-wrapper .dropdown-menu > li > a > .icon {
                background-position: 50% 50%;
                background-repeat: no-repeat;
                display: inline-block;
                height: 16px;
                margin-right: 10px;
                vertical-align: middle;
                width: 16px;
            }

            #nav-bar .account-wrapper .dropdown-menu > li > a > #profile-icon { background: url("/static/icons/profile_icon.svg"); width: 12px; }
            #nav-bar .account-wrapper .dropdown-menu > li > a:hover > #profile-icon { background: url("/static/icons/profile_icon_blue.svg"); }

            #nav-bar .account-wrapper .dropdown-menu > li > a > #settings-icon { background: url("/static/icons/settings_icon.svg"); }
            #nav-bar .account-wrapper .dropdown-menu > li > a:hover > #settings-icon { background: url("/static/icons/settings_icon_blue.svg"); }

            #nav-bar .account-wrapper .dropdown-menu > li > a > #logout-icon { background: url("/static/icons/logout_icon.svg"); }
            #nav-bar .account-wrapper .dropdown-menu > li > a:hover > #logout-icon { background: url("/static/icons/logout_icon_blue.svg"); }

            #nav-bar .account-wrapper .dropdown-menu > li > a > #admin-icon { background: url("/static/icons/admin_icon.svg"); height: 9px;;}
            #nav-bar .account-wrapper .dropdown-menu > li > a:hover > #admin-icon { background: url("/static/icons/admin_icon_blue.svg"); }

        #nav-bar .account-wrapper .dropdown-menu > li > a:hover {
            background-color: #fff;
            color: #02b8ef;
        }

        #nav-bar .account-wrapper .account-name { margin-right:10px; }

        #nav-bar .account-wrapper .account-icon {
            cursor: pointer;
            height: 32px;
            width: 32px;
        }

#img-bar {
    background: url("/static/images/ml_header06.jpg");
    background-attachment: scroll;
    background-position: 50% 40%;
    background-repeat: no-repeat;
    background-size: cover;
}

#title-bar {
    background: none;
    color: #fff;
    padding: 50px 0px;
    text-align: center;
}

    #title-bar .league-title {
        display: block;
        font-family: 'Cubano', sans-serif;
        font-size: 60px;
        line-height: 72px;
    }

    #title-bar .league-created {
        display: block;
        font-size: 18px;
        line-height: 19px;
        margin: 50px 0px;
    }

    #title-bar .members {
        font-size: 18px;
        line-height: 40px;
    }

        #title-bar .members img {
            height: 40px;
            margin-right: -25px;
            width: 40px;
        }

        #title-bar .members img:last-of-type { margin-right: 0px !important; }

        #title-bar .members #member-count { margin: 0px 10px; }

        #title-bar .members #members-collapse #members-container {
            background-color: rgba(0, 37, 154, 0.85);
            border: 3px solid #fff;
            border-radius: 8px;
            color: #fff;
            font-size: 14px;
            line-height: 19px;
            margin-top: 25px;
            padding: 25px 0px;
        }

#current-round-bar {
    background-color: #02B8EF;
    color: #fff;
    margin-bottom: 50px;
    padding: 50px;
    width: 100%;
}

    #current-round-bar .call-for-action {
        color: #fff;
        display: block;
        font-family: 'Cubano', sans-serif;
        font-size: 24px;
        line-height: 29px;
        margin-bottom: 25px;
    }

    #current-round-bar .round-bar .round-status-icon.current { background: url("/static/icons/swords_white.svg"); }

    #current-round-bar .round-bar .round-title {
        color: #fff;
        font-size: 18px;
        line-height: 22px;
    }

    #current-round-bar .round-bar .status-text { color: #fff; margin: 15px 0px; }

    #current-round-bar .action-progress { display: block; }
/* ... */

